# testing-coding-standards-and-ci-cd-LexSomers

./: .gitignore  README.md  app.py  pyproject.toml  test_1.py
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
