[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Micah Ferrill", email = "ferrillm@avtest.com"},
]
dependencies = [
    "pytest~=6.2",
]
requires-python = ">=3.7"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pytest.ini_options]
markers = [
    "integration",
]